--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "@test/schema": "0.1.0",
+    "@types/styled-components": "^5.0.0",
     "axios": "^0.19.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
@@ -24,7 +25,10 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@types/node": "^13.7.4",
+    "@types/react": "^16.9.21",
     "babel-plugin-styled-components": "^1.10.6",
-    "next-transpile-modules": "^2.3.1"
+    "next-transpile-modules": "^2.3.1",
+    "typescript": "^3.8.2"
   }
 }
