:pencil: rename packages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wordpress-after",
+  "name": "@gsandf/wordpress-next",
   "version": "0.1.0",
   "private": true,
   "main": "index.js",
@@ -15,13 +15,13 @@
   "scripts": {
     "bootstrap": "bash -c ./bootstrap.sh",
     "build:image": "docker-compose build",
-    "debug": "yarn workspace @test/site dev",
-    "dev": "yarn workspace @test/site dev",
+    "debug": "yarn workspace @gsandf/wordpress-site dev",
+    "dev": "yarn workspace @gsandf/wordpress-site dev",
     "down": "docker-compose down",
     "format": "run-p 'theme:prettier --write' 'site format --write'",
-    "schema": "yarn workspace @test/schema",
-    "site": "yarn workspace @test/site",
     "start": "run-p 'up' 'dev'",
+    "schema": "yarn workspace @gsandf/wordpress-graphql-schema",
+    "site": "yarn workspace @gsandf/wordpress-site",
     "test": "run-p 'schema test'",
     "theme:prettier": "prettier packages/wordpress-theme ./**/*.{php,js}",
     "up": "docker-compose up --detach",
