--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@test/site",
+  "name": "@gsandf/wordpress-site",
   "version": "0.1.0",
   "main": "index.js",
   "author": "GS&F Devs <mindreactor@gsandf.com> (https://gsandf.com/)",
   "license": "MIT",
   "dependencies": {
-    "@test/schema": "0.1.0",
+    "@gsandf/wordpress-graphql-schema": "0.1.0",
     "@types/styled-components": "^5.0.0",
     "axios": "^0.19.0",
     "esm": "^3.2.25",
