--- a/packages/wordpress-graphql-schema/package.json
+++ b/packages/wordpress-graphql-schema/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@test/schema",
+  "name": "@gsandf/wordpress-graphql-schema",
   "version": "0.1.0",
   "license": "MIT",
   "dependencies": {
