--- a/packages/create-wordpress/package.json
+++ b/packages/create-wordpress/package.json
@@ -5,6 +5,7 @@
   "author": "GS&F Devs <mindreactor@gsandf.com> (https://gsandf.com/)",
   "license": "MIT",
   "dependencies": {
+    "execa": "^4.0.0",
     "got": "^10.6.0",
     "meow": "^6.0.1",
     "promisepipe": "^3.0.0",
