--- a/package.json
+++ b/package.json
@@ -1,31 +1,22 @@
 {
-  "name": "@gsandf/wordpress-next",
+  "name": "@gsandf/site-root",
   "version": "0.1.0",
   "private": true,
   "main": "index.js",
   "author": "GS&F Devs <mindreactor@gsandf.com> (https://gsandf.com/)",
   "license": "MIT",
   "devDependencies": {
-    "@prettier/plugin-php": "^0.11.2",
     "amper-scripts": "^1.0.0-0",
-    "create-razzle-app": "^3.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "1.19.1"
   },
   "scripts": {
-    "bootstrap": "bash -c ./bootstrap.sh",
-    "build:image": "docker-compose build",
-    "debug": "yarn workspace @gsandf/wordpress-site dev",
-    "dev": "yarn workspace @gsandf/wordpress-site dev",
-    "down": "docker-compose down",
-    "format": "run-p 'theme:prettier --write' 'site format --write'",
-    "start": "run-p 'up' 'dev'",
-    "schema": "yarn workspace @gsandf/wordpress-graphql-schema",
-    "site": "yarn workspace @gsandf/wordpress-site",
-    "test": "run-p 'schema test'",
-    "theme:prettier": "prettier packages/wordpress-theme ./**/*.{php,js}",
-    "up": "docker-compose up --detach",
-    "validate": "run-p 'theme:prettier --check' 'site validate'"
+    "format-check": "run-p 'create-site format-check' 'wordpress-graphql-schema format-check'",
+    "format": "run-p 'create-site format-write' 'wordpress-graphql-schema format-write'",
+    "lint": "run-p 'create-site lint' 'wordpress-graphql-schema lint'",
+    "test": "run-p 'wordpress-graphql-schema test'",
+    "create-site": "yarn workspace @gsandf/create-site",
+    "wordpress-graphql-schema": "yarn workspace @gsandf/wordpress-graphql-schema"
   },
   "workspaces": [
     "packages/*"
