--- a/packages/create-site/package.json
+++ b/packages/create-site/package.json
@@ -5,6 +5,7 @@
   "author": "GS&F Devs <mindreactor@gsandf.com> (https://gsandf.com/)",
   "license": "MIT",
   "dependencies": {
+    "esm": "^3.2.25",
     "execa": "^4.0.0",
     "got": "^10.6.0",
     "meow": "^6.0.1",
