--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "@gsandf/site-root",
+  "name": "create-gsandf-site",
+  "bin": "./src/commonjs-entry.js",
   "version": "0.1.0",
-  "private": true,
-  "main": "index.js",
+  "main": "./src/commonjs-entry.js",
   "author": "GS&F Devs <mindreactor@gsandf.com> (https://gsandf.com/)",
   "license": "MIT",
+  "dependencies": {
+    "esm": "^3.2.25",
+    "execa": "^4.0.0",
+    "got": "^10.6.0",
+    "meow": "^6.0.1",
+    "promisepipe": "^3.0.0",
+    "tar": "^6.0.1"
+  },
   "devDependencies": {
     "amper-scripts": "^1.0.0-0",
     "npm-run-all": "^4.1.5",
     "prettier": "1.19.1"
   },
   "scripts": {
-    "format-check": "run-p 'create-site format-check' 'wordpress-graphql-schema format-check'",
-    "format": "run-p 'create-site format-write' 'wordpress-graphql-schema format-write'",
-    "lint": "run-p 'create-site lint' 'wordpress-graphql-schema lint'",
-    "test": "run-p 'wordpress-graphql-schema test'",
-    "create-site": "yarn workspace @gsandf/create-site",
-    "wordpress-graphql-schema": "yarn workspace @gsandf/wordpress-graphql-schema"
-  },
-  "workspaces": [
-    "packages/*"
-  ]
+    "format": "amper-scripts format-write",
+    "format-check": "amper-scripts format-check",
+    "lint": "amper-scripts lint --config ../../.eslintrc.js src",
+    "start": "node -r esm src/index.js",
+    "validate": "run-p format-check lint"
+  }
 }
