--- a/examples/wordpress-next/package.json
+++ b/examples/wordpress-next/package.json
@@ -9,12 +9,15 @@
     "amper-scripts": "^1.0.0-0",
     "create-razzle-app": "^3.0.0",
     "npm-run-all": "^4.1.5",
+    "pm2": "^4.2.3",
     "prettier": "1.19.1"
   },
   "scripts": {
     "bootstrap": "bash -c ./bootstrap.sh",
+    "build": "yarn workspace @example/site build",
     "build:image": "docker-compose build",
     "debug": "yarn workspace @example/site dev",
+    "deploy": "pm2 deploy",
     "dev": "yarn workspace @example/site dev",
     "down": "docker-compose down",
     "format": "run-p 'theme:prettier --write' 'site format --write'",
