--- a/examples/wordpress-next/.editorconfig
+++ b/examples/wordpress-next/.editorconfig
@@ -15,6 +15,6 @@ insert_final_newline = true
 [*.md]
 trim_trailing_whitespace = false
 
-[*.sh]
+[*.{conf,sh}]
 indent_size = 4
 indent_style = tab
