:fire: remove specific server name from repo

--- a/examples/wordpress-next/.deployment/nginx.conf
+++ b/examples/wordpress-next/.deployment/nginx.conf
@@ -4,7 +4,7 @@ upstream nextjs {
 
 server {
 	listen 80;
-	server_name dev.eurekamdf.com;
+	server_name _;
 
 	client_max_body_size 64M;
 	root /var/www/html;
