--- a/examples/wordpress-next/packages/site/package.json
+++ b/examples/wordpress-next/packages/site/package.json
@@ -13,6 +13,7 @@
     "graphql-yoga": "^1.18.3",
     "http-status-codes": "^1.4.0",
     "next": "^9.3.2",
+    "polished": "^3.5.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
