:rocket: add server setup scripts for adding onto base server

--- a/examples/wordpress-next/package.json
+++ b/examples/wordpress-next/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@prettier/plugin-php": "^0.11.2",
     "amper-scripts": "^1.0.0-0",
+    "env-cmd": "^10.1.0",
     "npm-run-all": "^4.1.5",
     "pm2": "^4.2.3",
     "prettier": "1.19.1"
@@ -16,9 +17,15 @@
     "build": "yarn workspace @example/site build",
     "build:image": "docker-compose build",
     "debug": "yarn workspace @example/site dev",
-    "deploy": "pm2 deploy",
+    "deploy": "env-cmd pm2 deploy",
+    "deploy:develop": "yarn deploy develop",
+    "deploy:staging": "yarn deploy staging",
+    "deploy:production": "yarn deploy production",
     "dev": "yarn workspace @example/site dev",
     "down": "docker-compose down",
+    "exec:develop": "yarn deploy develop exec",
+    "exec:production": "yarn deploy production exec",
+    "exec:staging": "yarn deploy staging exec",
     "format": "run-p 'theme:prettier --write' 'site format --write'",
     "site": "yarn workspace @example/site",
     "start": "yarn start:dev",
