--- a/examples/wordpress-next/.deployment/wordpress-react.conf
+++ b/examples/wordpress-next/.deployment/wordpress-react.conf
@@ -7,7 +7,7 @@ server {
 	server_name _;
 
 	client_max_body_size 64M;
-	root /var/www/html;
+	root /var/www/wordpress;
 
 	# Forward requests for PHP files to the PHP FastCGI service
 	location ~ \.php$ {
