--- a/examples/wordpress-next/packages/site/package.json
+++ b/examples/wordpress-next/packages/site/package.json
@@ -6,18 +6,22 @@
   "license": "MIT",
   "dependencies": {
     "@gsandf/wordpress-graphql-schema": "^0.1.0",
-    "@types/styled-components": "^5.0.0",
+    "@types/node": "^13.13.4",
+    "@types/react": "^16.9.34",
+    "@types/styled-components": "^5.1.0",
     "axios": "^0.19.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "graphql-yoga": "^1.18.3",
     "http-status-codes": "^1.4.0",
-    "next": "^9.3.2",
-    "polished": "^3.5.1",
+    "next": "^9.3.6",
+    "nodemon": "^2.0.3",
+    "pm2": "^4.4.0",
+    "polished": "^3.5.2",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "styled-components": "^4.4.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "styled-components": "^5.1.0",
     "unchanged": "^2.2.1"
   },
   "scripts": {
