--- a/examples/universal-typescript/tsconfig.json
+++ b/examples/universal-typescript/tsconfig.json
@@ -6,16 +6,16 @@
     "declaration": true,
     "esModuleInterop": true,
     "incremental": true,
-    "module": "commonjs",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "dist",
     "sourceMap": true,
-    "target": "es2020",
+    "target": "ES2020",
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
     }
   },
   "include": ["src/**/*"],
-  "exclude": ["**/*.test.ts", "**/*.test.js", "**/testHelpers/**"]
+  "exclude": ["dist/**/*", "**/*.test.ts", "**/*.test.js", "**/testHelpers/**"]
 }
