--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
   "license": "MIT",
   "dependencies": {
     "esm": "^3.2.25",
-    "execa": "^4.0.0",
-    "got": "^10.6.0",
-    "meow": "^6.0.1",
+    "execa": "^4.0.2",
+    "got": "^11.3.0",
+    "meow": "^7.0.1",
     "promisepipe": "^3.0.0",
-    "tar": "^6.0.1"
+    "tar": "^6.0.2"
   },
   "devDependencies": {
     "amper-scripts": "^1.0.0-0",
     "npm-run-all": "^4.1.5",
-    "prettier": "1.19.1"
+    "prettier": "2.0.5"
   },
   "scripts": {
     "format": "amper-scripts format-write",
     "format-check": "amper-scripts format-check",
-    "lint": "amper-scripts lint --config ../../.eslintrc.js src",
+    "lint": "amper-scripts lint src",
     "start": "node -r esm src/index.js",
     "validate": "run-p format-check lint"
   }
