--- a/examples/wordpress-next/packages/site/package.json
+++ b/examples/wordpress-next/packages/site/package.json
@@ -9,10 +9,8 @@
     "@types/node": "^14.0.11",
     "@types/react": "^16.9.35",
     "@types/styled-components": "^5.1.0",
+    "apollo-server-micro": "^2.14.2",
     "axios": "^0.19.0",
-    "esm": "^3.2.25",
-    "express": "^4.17.1",
-    "graphql-yoga": "^1.18.3",
     "http-status-codes": "^1.4.0",
     "next": "^9.4.4",
     "nodemon": "^2.0.4",
@@ -26,11 +24,11 @@
   },
   "scripts": {
     "build": "next build",
-    "dev": "nodemon -r esm server.js",
+    "dev": "next dev",
     "format": "amper-scripts format-write *.js **/*.js",
     "format-check": "amper-scripts format-check *.js **/*.js",
     "lint": "amper-scripts lint --config ../../.eslintrc.js *.js **/*.js",
-    "start": "NODE_ENV=production node -r esm server.js",
+    "start": "next start",
     "test": "jest",
     "validate": "run-p format-check lint"
   },
