--- a/examples/wordpress-next/packages/site/package.json
+++ b/examples/wordpress-next/packages/site/package.json
@@ -11,9 +11,9 @@
     "@types/styled-components": "^5.1.0",
     "apollo-server-micro": "^2.14.2",
     "axios": "^0.19.0",
+    "create-root-schema": "^2.0.0",
     "http-status-codes": "^1.4.0",
     "next": "^9.4.4",
-    "nodemon": "^2.0.4",
     "pm2": "^4.4.0",
     "polished": "^3.6.4",
     "prop-types": "^15.7.2",
@@ -37,7 +37,6 @@
     "@types/react": "^16.9.21",
     "amper-scripts": "^1.0.0-0",
     "babel-plugin-styled-components": "^1.10.6",
-    "nodemon": "^2.0.2",
     "typescript": "^3.9.5"
   }
 }
