:truck: move most files from production sites

--- a/examples/wordpress-next/.deployment/wordpress-react.conf
+++ b/examples/wordpress-next/.deployment/wordpress-react.conf
@@ -3,30 +3,78 @@ upstream nextjs {
 }
 
 server {
-	listen 80;
+	listen 80 default_server;
 	server_name _;
 
 	client_max_body_size 64M;
 	root /var/www/wordpress;
 
-	# Forward requests for PHP files to the PHP FastCGI service
+	##
+	# Proxy settings
+	##
+	proxy_cache_bypass $http_upgrade;
+	proxy_cache_lock on;
+	proxy_cache_revalidate on;
+	proxy_http_version 1.1;
+	proxy_redirect off;
+	proxy_set_header Connection 'upgrade';
+	proxy_set_header Host $http_host;
+	proxy_set_header Upgrade $http_upgrade;
+	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	proxy_set_header X-Real-IP $remote_addr;
+
+	##
+	# PHP - handle requests for PHP files
+	##
 	location ~ \.php$ {
 		include snippets/fastcgi-php.conf;
-		fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
+		fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
 	}
 
-	# Handle requests for WordPress admin routes and /wp-json
+	##
+	# WebP Express plugin settings
+	# Uncomment if the WebP Express plugin is installed
+	##
+	# # WebP Express - serve WebP images
+	# location ~* ^/?wp-content/.*\.(png|jpe?g)$ {
+	# 	add_header Vary Accept;
+	# 	expires 365d;
+	# 	if ($http_accept !~* "webp") {
+	# 		break;
+	# 	}
+	# 	try_files
+	# 	  /wp-content/webp-express/webp-images/doc-root/$uri.webp
+	# 	  $uri.webp
+	# 	  /wp-content/plugins/webp-express/wod/webp-on-demand.php?xsource=x$request_filename&wp-content=wp-content
+	# 	;
+	# }
+	#
+	# # WebP Express - Route requests for non-existing webps to the converter
+	# location ~* ^/?wp-content/.*\.(png|jpe?g)\.webp$ {
+	# 	try_files
+	# 	  $uri
+	# 	  /wp-content/plugins/webp-express/wod/webp-realizer.php?xdestination=x$request_filename&wp-content=wp-content
+	# 	;
+	# }
+
+	##
+	# WordPress - Handle requests for WordPress admin routes and /wp-json
+	##
 	location ~ ^/wp- {
 		index index.php index.html index.htm;
 		try_files $uri $uri/ /index.php?$args;
 	}
 
-	# Serve compiled files from Next.js
+	##
+	# Node.js - Serve compiled files from Next.js
+	##
 	location /_next {
 		alias /var/www/react/current/packages/site/.next;
 	}
 
-	# All other requests are forwarded to the Next.js service
+	##
+	# All requests not already served are passed to the Next.js service
+	##
 	location / {
 		proxy_pass http://nextjs/;
 		proxy_redirect off;
