--- a/examples/wordpress-next/package.json
+++ b/examples/wordpress-next/package.json
@@ -5,12 +5,14 @@
   "author": "GS&F Devs <mindreactor@gsandf.com> (https://gsandf.com/)",
   "license": "MIT",
   "devDependencies": {
-    "@prettier/plugin-php": "^0.14.2",
-    "amper-scripts": "^1.0.0-0",
+    "@prettier/plugin-php": "^0.14.3",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "amper-scripts": "^1.0.0-1",
     "env-cmd": "^10.1.0",
     "npm-run-all": "^4.1.5",
-    "pm2": "^4.4.0",
-    "prettier": "2.0.5"
+    "pm2": "^4.4.1",
+    "prettier": "2.1.0"
   },
   "scripts": {
     "bootstrap": "bash -c ./bootstrap.sh",
@@ -21,19 +23,22 @@
     "deploy:develop": "yarn deploy develop",
     "deploy:staging": "yarn deploy staging",
     "deploy:production": "yarn deploy production",
-    "dev": "yarn workspace @example/site dev",
+    "dev": "WORDPRESS_URL=${WORDPRESS_URL:-'https://dev.replace_me.com'} yarn workspace @example/site dev",
     "down": "docker-compose down",
     "exec:develop": "yarn deploy develop exec",
     "exec:production": "yarn deploy production exec",
     "exec:staging": "yarn deploy staging exec",
     "format": "run-p 'theme:prettier --write' 'site format --write'",
+    "lint": "run-p 'site lint'",
+    "preload-pages": "WORDPRESS_URL=${WORDPRESS_URL:-'https://dev.replace_me.com'} node .deployment/precompile-pages.js",
+    "plugins:backup": "wp @develop plugin-list backup > plugins.json",
     "serve": "next start packages/site/",
     "site": "yarn workspace @example/site",
     "start": "yarn start:dev",
-    "start:dev": "WORDPRESS_API='https://dev.webapi.gsandf.com/wp-json' yarn dev",
+    "start:dev": "WORDPRESS_URL='https://dev.replace_me.com' yarn dev",
     "start:local": "run-p 'up' 'dev'",
-    "start:stage": "WORDPRESS_API='https://stage.webapi.gsandf.com/wp-json' yarn dev",
-    "start:prod": "WORDPRESS_API='https://webapi.gsandf.com/wp-json' yarn dev",
+    "start:stage": "WORDPRESS_URL='https://stage.replace_me.com' yarn dev",
+    "start:prod": "WORDPRESS_URL='https://replace_me.com' yarn dev",
     "theme:prettier": "prettier packages/wordpress-theme ./**/*.{php,js}",
     "up": "docker-compose up --detach",
     "validate": "run-p 'theme:prettier --check' 'site validate'"
