--- a/examples/wordpress-next/packages/site/package.json
+++ b/examples/wordpress-next/packages/site/package.json
@@ -5,18 +5,15 @@
   "author": "GS&F Devs <mindreactor@gsandf.com> (https://gsandf.com/)",
   "license": "MIT",
   "dependencies": {
-    "@gsandf/wordpress-graphql-schema": "^0.3.2",
-    "@types/node": "^14.0.11",
-    "@types/react": "^16.9.35",
-    "@types/styled-components": "^5.1.0",
-    "apollo-server-micro": "^2.14.2",
-    "axios": "^0.19.0",
-    "create-root-schema": "^2.0.0",
-    "http-status-codes": "^1.4.0",
-    "next": "^9.4.4",
-    "pm2": "^4.4.0",
-    "polished": "^3.6.4",
-    "prop-types": "^15.7.2",
+    "@blakek/array-split": "^2.0.1",
+    "@types/node": "^14.6.0",
+    "@types/react": "^16.9.47",
+    "@types/styled-components": "^5.1.2",
+    "axios": "^0.20.0",
+    "date-fns": "^2.16.1",
+    "next": "^9.5.2",
+    "polished": "^3.6.5",
+    "quick-lru": "^5.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.1.1",
@@ -25,18 +22,17 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "format": "amper-scripts format-write *.js **/*.js",
-    "format-check": "amper-scripts format-check *.js **/*.js",
-    "lint": "amper-scripts lint --config ../../.eslintrc.js *.js **/*.js",
+    "format": "prettier --write **/*.{js,ts,tsx}",
+    "format-check": "prettier --check **/*.{js,ts,tsx}",
+    "lint": "eslint --config ../../.eslintrc.js --ext .js,.jsx,.ts,.tsx .",
     "start": "next start",
     "test": "jest",
-    "validate": "run-p format-check lint"
+    "typeCheck": "tsc --noEmit",
+    "validate": "run-p format-check lint typeCheck"
   },
   "devDependencies": {
-    "@types/node": "^13.7.4",
-    "@types/react": "^16.9.21",
-    "amper-scripts": "^1.0.0-0",
-    "babel-plugin-styled-components": "^1.10.6",
-    "typescript": "^3.9.5"
+    "amper-scripts": "^1.0.0-1",
+    "babel-plugin-styled-components": "^1.11.1",
+    "typescript": "^4.0.2"
   }
 }
