--- a/examples/wordpress-next/package.json
+++ b/examples/wordpress-next/package.json
@@ -10,6 +10,7 @@
     "@typescript-eslint/parser": "^4.9.0",
     "amper-scripts": "^1.0.0-1",
     "env-cmd": "^10.1.0",
+    "eslint": "^7.14.0",
     "npm-run-all": "^4.1.5",
     "pm2": "^4.4.1",
     "prettier": "2.2.1"
