--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -6,28 +6,31 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@blakek/deep": "^2.1.1",
-    "next": "9.4.4",
-    "polished": "^3.6.5",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "styled-components": "^5.1.1"
+    "next": "10.0.3",
+    "polished": "^4.0.5",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "@types/node": "^14.0.19",
-    "@types/react": "^16.9.41",
-    "@types/styled-components": "^5.1.1",
-    "@typescript-eslint/eslint-plugin": "^3.6.0",
-    "@typescript-eslint/parser": "^3.6.0",
-    "amper-scripts": "^1.0.0-0",
-    "babel-plugin-styled-components": "^1.10.7",
-    "typescript": "^3.9.6"
+    "@types/node": "^14.14.10",
+    "@types/react": "^17.0.0",
+    "@types/styled-components": "^5.1.4",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "amper-scripts": "^1.0.0-1",
+    "babel-plugin-styled-components": "^1.12.0",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^4.1.2"
   },
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "format-check": "amper-scripts format-check",
-    "format": "amper-scripts format-write",
-    "lint": "amper-scripts lint --config ./.eslintrc.js 'src/**/*.{js,ts,tsx}'",
-    "start": "next start"
+    "format-check": "amper-scripts format-check '*.{js,ts,tsx}' 'src/**/*.{js,ts,tsx}'",
+    "format": "amper-scripts format-write '*.{js,ts,tsx}' 'src/**/*.{js,ts,tsx}'",
+    "lint": "amper-scripts lint --config ./.eslintrc.js '*.{js,ts,tsx}' 'src/**/*.{js,ts,tsx}'",
+    "start": "next start",
+    "typeCheck": "tsc --noEmit",
+    "validate": "run-p format-check lint typeCheck"
   }
 }
