--- a/examples/universal-typescript/package.json
+++ b/examples/universal-typescript/package.json
@@ -48,26 +48,26 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/plugin-transform-runtime": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/preset-typescript": "^7.10.1",
-    "@rollup/plugin-babel": "^5.0.3",
-    "@rollup/plugin-commonjs": "^13.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.1",
-    "@typescript-eslint/eslint-plugin": "^3.1.0",
-    "@typescript-eslint/parser": "^3.1.0",
-    "amper-scripts": "^1.0.0-0",
-    "ava": "^3.8.2",
-    "nodemon": "^2.0.4",
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-typescript": "^7.12.7",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "amper-scripts": "^1.0.0-1",
+    "ava": "^3.13.0",
+    "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.5",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.15.0",
-    "rollup-plugin-terser": "^6.1.0",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.5"
+    "rollup": "^2.34.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.1.2"
   },
   "peerDependencies": {},
   "scripts": {
@@ -75,10 +75,12 @@
     "build:clean": "rimraf ./dist",
     "build:types": "tsc --emitDeclarationOnly",
     "build:js": "rollup -c",
-    "format-check": "amper-scripts format-check",
-    "format": "amper-scripts format-write",
-    "lint": "amper-scripts lint --config ./.eslintrc.js 'src/**/*.{js,ts,tsx}'",
+    "format-check": "amper-scripts format-check '*.{js,ts,tsx}' 'src/**/*.{js,ts,tsx}'",
+    "format": "amper-scripts format-write '*.{js,ts,tsx}' 'src/**/*.{js,ts,tsx}'",
+    "lint": "amper-scripts lint --config ./.eslintrc.js '*.{js,ts,tsx}' 'src/**/*.{js,ts,tsx}'",
     "prepublish": "yarn build",
-    "test": "ava"
+    "test": "ava",
+    "typeCheck": "tsc --noEmit",
+    "validate": "run-p format-check lint typeCheck"
   }
 }
