--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -4,24 +4,44 @@
   "private": true,
   "author": "GS&F Devs <mindreactor@gsandf.com> (https://gsandf.com/)",
   "license": "UNLICENSED",
+  "ava": {
+    "extensions": [
+      "js",
+      "ts"
+    ],
+    "files": [
+      "src/**/*.test.ts"
+    ],
+    "ignoredByWatcher": [
+      "!src/**"
+    ],
+    "require": [
+      "./.ava-entry.js"
+    ]
+  },
   "dependencies": {
     "@blakek/deep": "^2.1.1",
-    "next": "10.0.3",
+    "next": "10.0.4",
     "polished": "^4.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.10",
+    "@types/node": "^14.14.19",
     "@types/react": "^17.0.0",
-    "@types/styled-components": "^5.1.4",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
+    "@types/styled-components": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
     "amper-scripts": "^1.0.0-1",
+    "ava": "^3.15.0",
     "babel-plugin-styled-components": "^1.12.0",
     "npm-run-all": "^4.1.5",
-    "typescript": "^4.1.2"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
+  },
+  "engines": {
+    "node": "14.x"
   },
   "scripts": {
     "build": "next build",
@@ -30,6 +50,7 @@
     "format": "amper-scripts format-write '*.{js,ts,tsx}' 'src/**/*.{js,ts,tsx}'",
     "lint": "amper-scripts lint --config ./.eslintrc.js '*.{js,ts,tsx}' 'src/**/*.{js,ts,tsx}'",
     "start": "next start",
+    "test": "ava",
     "typeCheck": "tsc --noEmit",
     "validate": "run-p format-check lint typeCheck"
   }
