:green_heart: fix Nginx not working with Next.js errors
Resolves #29

--- a/examples/wordpress-next/.deployment/wordpress-react.conf
+++ b/examples/wordpress-next/.deployment/wordpress-react.conf
@@ -58,9 +58,9 @@ server {
 	# }
 
 	##
-	# WordPress - Handle requests for WordPress admin routes and /wp-json
+	# WordPress - Handle requests for WordPress admin routes, /wp-json, and GraphQL
 	##
-	location ~ ^/wp- {
+	location ~ ^/(wp-*|graphql) {
 		index index.php index.html index.htm;
 		try_files $uri $uri/ /index.php?$args;
 	}
