:sparkles: migrate fixes from current Next.js/WordPress sites

--- a/examples/wordpress-next/.env
+++ b/examples/wordpress-next/.env
@@ -1,28 +1,11 @@
-WORDPRESS_PATH='/var/www/wordpress'
-
 ##
 # Deployment settings
 ##
-DEVELOP_HOST='replace_me'
+# Git SSH orign e.g. git@bitbucket.org:gsf-interactive/some-project.git
 BITBUCKET_GIT_SSH_ORIGIN='replace_me'
+
+DEVELOP_HOST='replace_me'
 STAGING_HOST='replace_me'
 PRODUCTION_HOST='replace_me'
 
-##
-# Local database setup
-##
-MYSQL_DATABASE=demo
-MYSQL_HOST=db
-MYSQL_PASSWORD=password
-MYSQL_RANDOM_ROOT_PASSWORD=yes
-MYSQL_USER=user
-
-##
-# WordPress config
-##
-WORDPRESS_ADMIN_PASSWORD='replace_me'
-WORDPRESS_ADMIN_USER='replace_me'
-WORDPRESS_TITLE='Another WordPress Site'
-WORDPRESS_URL='localhost:8080'
-# WordPress version can be a number, 'latest' or 'nightly'
-WORDPRESS_VERSION='latest'
+WORDPRESS_PATH='/var/www/wordpress'
