--- a/examples/wordpress-next/package.json
+++ b/examples/wordpress-next/package.json
@@ -5,14 +5,14 @@
   "author": "GS&F Devs <mindreactor@gsandf.com> (https://gsandf.com/)",
   "license": "MIT",
   "devDependencies": {
-    "@prettier/plugin-php": "^0.16.0",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
-    "amper-scripts": "^1.0.0-1",
+    "@prettier/plugin-php": "^0.16.1",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
+    "amper-scripts": "^1.0.0",
     "env-cmd": "^10.1.0",
-    "eslint": "^7.14.0",
+    "eslint": "^7.21.0",
     "npm-run-all": "^4.1.5",
-    "pm2": "^4.4.1",
+    "pm2": "^4.5.5",
     "prettier": "2.2.1"
   },
   "scripts": {
