--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "@blakek/array-split": "^2.0.1",
     "@blakek/deep": "^2.1.1",
     "next": "10.0.4",
     "polished": "^4.0.5",
