--- a/examples/wordpress-next/package.json
+++ b/examples/wordpress-next/package.json
@@ -4,6 +4,21 @@
   "private": true,
   "author": "GS&F Devs <mindreactor@gsandf.com> (https://gsandf.com/)",
   "license": "MIT",
+  "ava": {
+    "extensions": [
+      "js",
+      "ts"
+    ],
+    "files": [
+      "src/**/*.test.ts"
+    ],
+    "ignoredByWatcher": [
+      "!src/**"
+    ],
+    "require": [
+      "./.ava-entry.js"
+    ]
+  },
   "devDependencies": {
     "@prettier/plugin-php": "^0.16.1",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
@@ -37,6 +52,7 @@
     "start:local": "run-p 'up' 'dev'",
     "start:stage": "WORDPRESS_URL='https://stage.replace_me.com' yarn dev",
     "start:prod": "WORDPRESS_URL='https://replace_me.com' yarn dev",
+    "test": "run-p 'site test'",
     "theme:prettier": "prettier packages/wordpress-theme ./**/*.{php,js}",
     "typeCheck": "yarn site typeCheck",
     "validate": "run-p 'theme:prettier --check' 'site validate'"
