--- a/examples/wordpress-next/packages/site/package.json
+++ b/examples/wordpress-next/packages/site/package.json
@@ -43,7 +43,7 @@
     "start": "next start",
     "test": "ava",
     "typeCheck": "tsc --noEmit",
-    "validate": "run-p format-check lint typeCheck"
+    "validate": "run-p format-check lint test typeCheck"
   },
   "devDependencies": {
     "amper-scripts": "^1.0.0",
