--- a/examples/wordpress-next/packages/site/tsconfig.json
+++ b/examples/wordpress-next/packages/site/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
@@ -16,7 +16,9 @@
     "baseUrl": ".",
     "paths": {
       "components/*": ["components/*"],
-      "templates/*": ["templates/*"]
+      "lib/*": ["lib/*"],
+      "templates/*": ["templates/*"],
+      "theme/*": ["theme/*"]
     }
   },
   "exclude": ["node_modules"],
