--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@blakek/deep": "^2.2.0",
-    "@gsandf/ui": "^0.0.1-14",
+    "@gsandf/ui": "^0.1.0",
     "next": "^11.0.1",
     "polished": "^4.1.3",
     "react": "17.0.2",
