--- a/examples/wordpress-next/packages/site/package.json
+++ b/examples/wordpress-next/packages/site/package.json
@@ -21,17 +21,17 @@
   },
   "dependencies": {
     "@blakek/array-split": "^2.0.1",
-    "@blakek/deep": "^2.1.1",
-    "@types/node": "^14.14.31",
-    "@types/react": "^17.0.2",
-    "@types/styled-components": "^5.1.7",
+    "@blakek/deep": "^2.2.0",
+    "@types/node": "^15.12.4",
+    "@types/react": "^17.0.11",
+    "@types/styled-components": "^5.1.10",
     "axios": "^0.21.1",
-    "date-fns": "^2.18.0",
-    "next": "^10.0.7",
-    "polished": "^4.1.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "styled-components": "^5.2.1",
+    "date-fns": "^2.22.1",
+    "next": "^11.0.1",
+    "polished": "^4.1.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0",
     "unchanged": "^2.2.1"
   },
   "scripts": {
@@ -49,7 +49,8 @@
     "amper-scripts": "^1.0.0",
     "ava": "^3.15.0",
     "babel-plugin-styled-components": "^1.11.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.2"
+    "react-is": "^17.0.2",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4"
   }
 }
