--- a/examples/wordpress-next/package.json
+++ b/examples/wordpress-next/package.json
@@ -37,8 +37,7 @@
     "deploy:develop": "yarn deploy develop",
     "deploy:staging": "yarn deploy staging",
     "deploy:production": "yarn deploy production",
-    "dev": "WORDPRESS_URL=${WORDPRESS_URL:-'https://dev.replace_me.com'} yarn workspace @example/site dev",
-    "dev:frontend": "WORDPRESS_URL=${WORDPRESS_URL:-'https://dev.replace_me.com'} yarn workspace @example/site dev",
+    "dev": "run-s site:start",
     "exec:develop": "yarn deploy develop exec",
     "exec:production": "yarn deploy production exec",
     "exec:staging": "yarn deploy staging exec",
@@ -48,10 +47,11 @@
     "plugins:backup": "wp @develop plugin-list backup > plugins.json",
     "serve": "next start packages/site/",
     "site": "yarn workspace @example/site",
+    "site:start": "WORDPRESS_URL=${WORDPRESS_URL:-'https://dev.replace_me.com'} yarn workspace @example/site dev",
     "start": "yarn start:dev",
-    "start:dev": "WORDPRESS_URL='https://dev.replace_me.com' yarn dev:frontend",
-    "start:stage": "WORDPRESS_URL='https://stage.replace_me.com' yarn dev:frontend",
-    "start:prod": "WORDPRESS_URL='https://replace_me.com' yarn dev:frontend",
+    "start:dev": "run-s site:start",
+    "start:stage": "WORDPRESS_URL='https://stage.replace_me.com' run-s site:start",
+    "start:prod": "WORDPRESS_URL='https://replace_me.com' run-s site:start",
     "test": "run-p 'site test'",
     "theme:prettier": "prettier packages/wordpress-theme ./**/*.{php,js}",
     "typeCheck": "yarn site typeCheck",
