--- a/examples/wordpress-next/packages/site/package.json
+++ b/examples/wordpress-next/packages/site/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@blakek/array-split": "^2.0.1",
     "@blakek/deep": "^2.2.0",
+    "@gsandf/ui": "^0.1.1",
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
     "@types/styled-components": "^5.1.10",
