--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
   "license": "MIT",
   "dependencies": {
     "esm": "^3.2.25",
-    "execa": "^4.0.2",
-    "got": "^11.3.0",
-    "meow": "^7.0.1",
+    "execa": "^5.1.1",
+    "got": "^11.8.2",
+    "meow": "^10.0.1",
     "promisepipe": "^3.0.0",
-    "tar": "^6.0.2"
+    "tar": "^6.1.0"
   },
   "devDependencies": {
-    "amper-scripts": "^1.0.0-0",
+    "amper-scripts": "^1.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "2.0.5"
+    "prettier": "2.3.2"
   },
   "scripts": {
     "format": "amper-scripts format-write",
