--- a/examples/universal-typescript/package.json
+++ b/examples/universal-typescript/package.json
@@ -56,10 +56,9 @@
     "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
-    "amper-scripts": "^1.0.0-1",
+    "amper-scripts": "^1.1.0",
     "ava": "^3.13.0",
+    "eslint-config-gsandf-typescript": "^1.0.2",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
@@ -77,8 +76,8 @@
     "build:js": "rollup -c",
     "format-check": "amper-scripts format-check '*.{js,ts,tsx}' 'src/**/*.{js,ts,tsx}'",
     "format": "amper-scripts format-write '*.{js,ts,tsx}' 'src/**/*.{js,ts,tsx}'",
-    "lint": "amper-scripts lint --config ./.eslintrc.js '*.{js,ts,tsx}' 'src/**/*.{js,ts,tsx}'",
-    "prepublish": "yarn build",
+    "lint": "amper-scripts lint 'src/**/*.{js,ts,tsx}'",
+    "prepack": "yarn build",
     "test": "ava",
     "typeCheck": "tsc --noEmit",
     "validate": "run-p format-check lint typeCheck"
