--- a/examples/universal-typescript/tsconfig.json
+++ b/examples/universal-typescript/tsconfig.json
@@ -16,6 +16,5 @@
       "*": ["node_modules/*", "src/types/*"]
     }
   },
-  "include": ["src/**/*"],
-  "exclude": ["dist/**/*", "**/*.test.ts", "**/*.test.js", "**/testHelpers/**"]
+  "include": ["src/**/*"]
 }
