--- a/examples/wordpress-next/package.json
+++ b/examples/wordpress-next/package.json
@@ -21,11 +21,10 @@
   },
   "devDependencies": {
     "@prettier/plugin-php": "^0.17.1",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.28.0",
     "amper-scripts": "^1.0.0",
     "env-cmd": "^10.1.0",
     "eslint": "^7.29.0",
+    "eslint-config-gsandf-typescript": "^1.0.1",
     "npm-run-all": "^4.1.5",
     "pm2": "^5.1.0",
     "prettier": "^2.3.1"
