--- a/examples/wordpress-next/packages/site/package.json
+++ b/examples/wordpress-next/packages/site/package.json
@@ -26,32 +26,30 @@
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
     "@types/styled-components": "^5.1.10",
+    "amper-scripts": "^1.0.0",
+    "ava": "^3.15.0",
     "axios": "^0.21.1",
+    "babel-plugin-styled-components": "^1.11.1",
     "date-fns": "^2.22.1",
     "next": "^11.0.1",
     "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-is": "^17.0.2",
     "styled-components": "^5.3.0",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4",
     "unchanged": "^2.2.1"
   },
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "format": "prettier --write **/*.{js,ts,tsx}",
-    "format-check": "prettier --check **/*.{js,ts,tsx}",
-    "lint": "eslint --config ../../.eslintrc.js --ext .js,.jsx,.ts,.tsx .",
+    "format": "amper-scripts format-write",
+    "format-check": "amper-scripts format-check",
+    "lint": "amper-scripts lint .",
     "start": "next start",
     "test": "ava",
     "typeCheck": "tsc --noEmit",
     "validate": "run-p format-check lint test typeCheck"
-  },
-  "devDependencies": {
-    "amper-scripts": "^1.0.0",
-    "ava": "^3.15.0",
-    "babel-plugin-styled-components": "^1.11.1",
-    "react-is": "^17.0.2",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.4"
   }
 }
