--- a/examples/wordpress-next/packages/site/tsconfig.json
+++ b/examples/wordpress-next/packages/site/tsconfig.json
@@ -1,26 +1,5 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": false,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "CommonJS",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "baseUrl": ".",
-    "paths": {
-      "components/*": ["components/*"],
-      "lib/*": ["lib/*"],
-      "templates/*": ["templates/*"],
-      "theme/*": ["theme/*"]
-    }
-  },
+  "extends": "../../tsconfig.json",
   "exclude": ["node_modules"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
