--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "amper-scripts": "^1.0.0",
+    "eslint-config-gsandf-typescript": "^1.0.2",
     "npm-run-all": "^4.1.5",
     "prettier": "2.3.2"
   },
