--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -21,21 +21,21 @@
   },
   "dependencies": {
     "@blakek/deep": "^2.2.0",
-    "@gsandf/ui": "^0.1.1",
+    "@gsandf/ui": "^0.1.2",
     "next": "^11.0.1",
     "polished": "^4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-is": "^17.0.2",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^15.12.5",
     "@types/react": "^17.0.11",
     "@types/styled-components": "^5.1.10",
-    "amper-scripts": "^1.1.0",
+    "amper-scripts": "^1.2.3",
     "ava": "^3.15.0",
-    "babel-plugin-styled-components": "^1.12.0",
-    "eslint-config-gsandf-typescript": "^1.0.2",
+    "babel-plugin-styled-components": "^1.13.1",
     "npm-run-all": "^4.1.5",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
