--- a/examples/wordpress-next/packages/site/package.json
+++ b/examples/wordpress-next/packages/site/package.json
@@ -22,14 +22,14 @@
   "dependencies": {
     "@blakek/array-split": "^2.0.1",
     "@blakek/deep": "^2.2.0",
-    "@gsandf/ui": "^0.1.1",
+    "@gsandf/ui": "^0.1.2",
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
     "@types/styled-components": "^5.1.10",
-    "amper-scripts": "^1.0.0",
+    "amper-scripts": "^1.2.3",
     "ava": "^3.15.0",
     "axios": "^0.21.1",
-    "babel-plugin-styled-components": "^1.11.1",
+    "babel-plugin-styled-components": "^1.13.1",
     "date-fns": "^2.22.1",
     "next": "^11.0.1",
     "polished": "^4.1.3",
@@ -44,8 +44,8 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "format": "amper-scripts format-write",
-    "format-check": "amper-scripts format-check",
+    "format": "amper-scripts format-write .",
+    "format-check": "amper-scripts format-check .",
     "lint": "amper-scripts lint .",
     "start": "next start",
     "test": "ava",
