--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -36,6 +36,7 @@
     "amper-scripts": "^1.2.3",
     "ava": "^3.15.0",
     "babel-plugin-styled-components": "^1.13.1",
+    "eslint-config-next": "^11.0.1",
     "npm-run-all": "^4.1.5",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
