--- a/examples/wordpress-next/package.json
+++ b/examples/wordpress-next/package.json
@@ -24,6 +24,7 @@
     "amper-scripts": "^1.2.3",
     "env-cmd": "^10.1.0",
     "eslint": "^7.29.0",
+    "eslint-config-next": "^11.0.1",
     "npm-run-all": "^4.1.5",
     "pm2": "^5.1.0",
     "prettier": "^2.3.1"
