--- a/examples/wordpress-next/package.json
+++ b/examples/wordpress-next/package.json
@@ -27,7 +27,8 @@
     "eslint-config-next": "^11.0.1",
     "npm-run-all": "^4.1.5",
     "pm2": "^5.1.0",
-    "prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "build": "yarn workspace @example/site build",
