:whale: add initial Docker setup for local development

--- a/examples/wordpress-next/.env
+++ b/examples/wordpress-next/.env
@@ -1,11 +1,16 @@
-##
-# Deployment settings
-##
-# Git SSH orign e.g. git@bitbucket.org:gsf-interactive/some-project.git
-BITBUCKET_GIT_SSH_ORIGIN='replace_me'
+MARIADB_ROOT_PASSWORD='dbpass'
+MARIADB_DATABASE='local'
+MARIADB_USER='dbuser'
+MARIADB_PASSWORD='dbpass'
 
-DEVELOP_HOST='replace_me'
-STAGING_HOST='replace_me'
-PRODUCTION_HOST='replace_me'
+WORDPRESS_DB_HOST='db'
+WORDPRESS_DB_USER='dbuser'
+WORDPRESS_DB_PASSWORD='dbpass'
+WORDPRESS_DB_NAME='local'
 
-WORDPRESS_PATH='/var/www/wordpress'
+ADMINER_DEFAULT_SERVER='db'
+ADMINER_DESIGN='pepa-linha'
+ADMINER_PLUGINS='dump-date dump-json dump-zip edit-foreign tables-filter'
+
+WORDPRESS_DEBUG='1'
+WORDPRESS_URL='http://wordpress'
