--- a/examples/wordpress-next/package.json
+++ b/examples/wordpress-next/package.json
@@ -32,30 +32,31 @@
   },
   "scripts": {
     "build": "yarn workspace @example/site build",
-    "debug": "yarn workspace @example/site dev",
     "deploy": "env-cmd pm2 deploy",
     "deploy:develop": "yarn deploy develop",
     "deploy:staging": "yarn deploy staging",
     "deploy:production": "yarn deploy production",
-    "dev": "run-s site:start",
+    "dev": "run-s start:dev",
+    "down": "docker-compose down",
     "exec:develop": "yarn deploy develop exec",
     "exec:production": "yarn deploy production exec",
     "exec:staging": "yarn deploy staging exec",
     "format": "run-p 'theme:prettier --write' 'site format --write'",
     "lint": "run-p 'site lint'",
-    "preload-pages": "WORDPRESS_URL=${WORDPRESS_URL:-'https://dev.replace_me.com'} node .deployment/precompile-pages.js",
-    "plugins:backup": "wp @develop plugin-list backup > plugins.json",
     "serve": "next start packages/site/",
     "site": "yarn workspace @example/site",
-    "site:start": "WORDPRESS_URL=${WORDPRESS_URL:-'https://dev.replace_me.com'} yarn workspace @example/site dev",
+    "site:start": " yarn workspace @example/site dev",
     "start": "yarn start:dev",
-    "start:dev": "run-s site:start",
+    "start:local": "run-s up",
+    "start:dev": "WORDPRESS_URL=${WORDPRESS_URL:-'https://dev.replace_me.com'} run-s site:start",
     "start:stage": "WORDPRESS_URL='https://stage.replace_me.com' run-s site:start",
     "start:prod": "WORDPRESS_URL='https://replace_me.com' run-s site:start",
     "test": "run-p 'site test'",
     "theme:prettier": "prettier packages/wordpress-theme ./**/*.{php,js}",
     "typeCheck": "yarn site typeCheck",
-    "validate": "run-p 'theme:prettier --check' 'site validate'"
+    "validate": "run-p 'theme:prettier --check' 'site validate'",
+    "up": "docker-compose --profile local up -d",
+    "wp": "docker-compose run --rm wpcli"
   },
   "workspaces": {
     "packages": [
